compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_usage_wrong.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1136
expression: "const pair = #(1, 2.0)\nfn main() { 1 == pair }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:2:18
  │
2 │ fn main() { 1 == pair }
  │                  ^^^^

Expected type:

    Int

Found type:

    #(Int, Float)


